<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NEWS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">BBC</string>
    <string name="menu_gallery">ALIJAZEERA</string>
    <string name="menu_slideshow">CNN</string>
    <string name="menu_slideshow1">FOX</string>
    <string name="menu_slideshow2">SKY</string>
    <string name="menu_slideshow3">NY</string>
    <string name="upcoming">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fox News</string>
    <string name="Sky">Sky News</string>
    <string name="Fox">Fox News</string>
    <string name="CNN">CNN</string>
    <string name="BBC">BBC</string>
    <string name="AljZeera">Aljzeera</string>

</resources>